@@ -5,6 +5,7 @@ cppthread (1.1.12.0~bionic) bionic; urgency=high
   * Enhanced the plugin test by calling the it_worked() function (made virtual).
   * Changed version verification, if negative, fail.
   * Added the GLOB_FLAG_EMPTY to allow for no files when globbing.
+  * Actually install the plugins.h header file.
   * Link the SNAPCATCH2 libray to the testme plugin (although at this point
     that's not useful since it is considered _detached_).
   * Various clean ups (docs, function order).
